# fathom-to-llmwiki

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/specs/meeting-export/: design.md  requirements.md  tasks.md
profiles/: customers.example.toml  team.example.toml
src/fathom_export/: cli.py  client.py  config.py  converter.py  profile.py  state.py  sync.py
src/meeting_export/: cli.py
src/meeting_export/fathom/: client.py  config.py  converter.py  profile.py  sync.py
src/meeting_export/gmeet/: auth.py  calendar_client.py  config.py  converter.py  drive_client.py  matcher.py  sync.py
src/meeting_export/shared/: convert.py  io.py  state.py
tests/: test_client.py  test_converter.py  test_profile.py  test_state.py
tests/fixtures/: meeting_response.json
