[project]
name = "meeting-export"
version = "0.2.0"
description = "Export meeting transcripts (Fathom, Google Meet) as markdown for LLM Wiki"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "click>=8.0",
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]

[project.urls]
Homepage = "https://github.com/gauthiergarnier/meeting-export"
Repository = "https://github.com/gauthiergarnier/meeting-export"
Documentation = "https://github.com/gauthiergarnier/meeting-export/tree/main/docs/specs/meeting-export"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.4",
]

[project.scripts]
meeting-export = "meeting_export.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
